<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.tech.sonet.ui.subscription_module.SubscriptionActivityVm" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.subscription_module.SubscriptionActivity">

        <ImageView
            android:id="@+id/Image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_arrow1"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:onClick="@{(v)->vm.onClick(v)}"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/Image" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:onClick="@{v -> vm.onClick(v)}"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp"
            android:layout_marginEnd="@dimen/_18sdp"
            app:layout_constraintTop_toTopOf="@id/back_arrow1"
            app:layout_constraintBottom_toBottomOf="@id/back_arrow1"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:background="@drawable/bg_sub_card"
            android:layout_marginHorizontal="@dimen/_18sdp"
            app:layout_constraintBottom_toTopOf="@id/buyNow"
            app:layout_constraintTop_toBottomOf="@id/Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ghostMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orkney_bold"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:text="@string/ghost_mode_stay_hiddenm_stay_connected"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/paidVersion"
                android:fontFamily="@font/orkney_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/paid_version"
                app:layout_constraintTop_toBottomOf="@id/ghostMode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orkney_bold"
                android:textSize="@dimen/_28ssp"
                android:text="@string/_1"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/paidVersion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/perMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/orkney_regular"
                app:layout_constraintTop_toBottomOf="@id/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/features"
                android:background="@color/green"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/_14ssp"
                android:paddingVertical="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintTop_toBottomOf="@id/perMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/green"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/enable_ghost_mode_and_browse_freely_while_staying_invisible_when_your_online_status_is_turned_off_you_won_t_be_seen_by_others_but_you_can_still_see_them_enjoy_privacy_without_missing_out_subscribe_now_and_take_control_of_your_visibility"
                app:layout_constraintTop_toBottomOf="@id/features"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/buyNow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:background="@drawable/gradient_background"
            android:fontFamily="@font/orkney_regular"
            android:gravity="center"
            android:onClick="@{(v)->vm.onClick(v)}"
            android:text="Buy Now"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>